--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=9000
-SECRET_KEY=Oghenevwede
-
+SECRET_KEY=JoelOvien
+MONGODB_URL='mongodb+srv://jovienloba1:dUmz7L9WW8nJN4bX@gocbtcluster.zpm22zo.mongodb.net/?retryWrites=true&w=majority'
